# aoe-repro

./: .dockerignore  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
configs/: default.yaml  faithful.yaml  hawor_hybrid_docker.yaml  hawor_hybrid_gpu.yaml  low_motion_segment.yaml  paper_original.yaml
docker/: README_hawor_gpu.md  hawor-gpu.Dockerfile
docs/: hawor_mediapipe_gpu_plan.md
envs/: hawor.sh
scripts/: check_hawor_env.py  check_hawor_runtime_gpu.py  download_ego4d.py  download_egodex.py  hawor_export.py  install_hawor_uv_env.sh  label_segments_vlm.py  make_hand_clip.py  make_sample_clip.py  merge_labels.py  prepare_hawor_docker_source_cache.sh  render_hand_views.py  run_hawor_with_mediapipe_hints.py  visualize_segments.py
src/aoe_pipeline/: __init__.py  cli.py  config.py  external.py  hawor_check.py  hawor_render.py  mp_assets.py  pipeline.py  qc.py  schema.py  utils.py  viz.py  vlm.py
src/aoe_pipeline/eval/: __init__.py  joint_maps.py  metrics.py
src/aoe_pipeline/stages/: __init__.py  adapter.py  base.py  registry.py  s1_ingest.py  s2_segment.py  s2b_label.py  s3_trajectory.py  s4_hands.py  s4_hands_hawor.py  s5_augment.py  s6_qc.py
tests/: conftest.py  test_cli_viz.py  test_external_adapters.py  test_hawor.py  test_hawor_render.py  test_label.py  test_metrics.py  test_pipeline_smoke.py  test_qc.py  test_schema.py  test_segment.py  test_visualize_segments.py  test_vlm.py
