[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoe-pipeline"
version = "0.1.0"
description = "Mac-runnable reproduction of the AoE (Always-on Egocentric) cloud labeling pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "CodeDance1" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "typer>=0.12",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "mediapipe>=0.10.14",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.44",
    "evo>=1.28",
]

[project.optional-dependencies]
vlm = ["anthropic>=0.40"]
augment = ["diffusers>=0.27", "accelerate>=0.30"]
download = ["requests>=2.31", "huggingface-hub>=0.24"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/CodeDance1/aoe-repro"
Repository = "https://github.com/CodeDance1/aoe-repro"

[project.scripts]
aoe-pipeline = "aoe_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aoe_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
